deleted sensor visibility fixed

--- a/monitor-frontend/src/assets/styles/partials/_user-profile.scss
+++ b/monitor-frontend/src/assets/styles/partials/_user-profile.scss
@@ -9,8 +9,8 @@
 
   .sensor-list {
     overflow-y: scroll;
-    max-height: 75vh;
-    min-height: 75vh;
+    max-height: 68vh;
+    min-height: 68vh;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: -ms-autohiding-scrollbar; /* Internet Explorer 10+ */
 
